plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.5'
	id 'io.spring.dependency-management' version '1.1.7'
	id "org.springdoc.openapi-gradle-plugin" version "1.9.0"
}

group = 'com.react-spring'
version = '0.0.1-SNAPSHOT'
description = 'Demo for react-spring'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	gradlePluginPortal()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.security:spring-security-config:6.5.3'
	implementation 'org.springframework.security:spring-security-web:6.5.3'
	implementation 'org.apache.kafka:kafka-clients:3.9.1'
	implementation 'org.springframework.kafka:spring-kafka:3.3.9'
	implementation 'org.liquibase:liquibase-core:4.31.1'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	testImplementation 'org.springframework.kafka:spring-kafka-test:3.3.9'
	testImplementation("org.testcontainers:junit-jupiter:1.21.3")
	compileOnly 'org.projectlombok:lombok:1.18.38'
	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
	implementation 'org.springdoc.openapi-gradle-plugin:org.springdoc.openapi-gradle-plugin.gradle.plugin:1.9.0'
	runtimeOnly 'org.postgresql:postgresql:42.7.7'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	annotationProcessor 'org.projectlombok:lombok:1.18.38'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.12.2'
}

tasks.named('test') {
	useJUnitPlatform()
}
